tests/expectations/parser/finalize/mapping_fail.out
Error [EPAR0370009]: unexpected string: expected 'identifier', found 'u8'
    --> test:3:13
     |
   3 |     mapping u8: u8 => u8;
     |             ^^
